<resources>
    <string name="app_name">ProofOfConcept</string>
    <string name="questions">Question</string>
    <string name="questions_answered">Question answered</string>
    <string name="check_answer">Check Answer</string>
    <string name="answer_true">True</string>
    <string name="answer_false">False</string>
    <string name="prev_button">Prev</string>
    <string name="next_button">Next</string>
    <string name="take_quiz_again">Take Quiz Again</string>
    <string name="score_banner">Score:</string>
    <string name="email_professor">Email Professor</string>


    <string name="username_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>


    <string name="auth_failed">AuthFailed</string>

    <string name="sign_out">Sign Out</string>

</resources>
