<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24sp"
    android:background="@color/colorPrimary"
    android:id="@+id/login_fragment"
    >

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:padding="24sp"
        android:background="@drawable/nwacc_logo"
        style="@style/rounded_image"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="24sp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:inputType="text"
            android:id="@+id/login_userName"
            android:layout_gravity="center"
            android:padding="12sp"
            android:hint="Name"
            style="@style/top_rounded"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:inputType="textEmailAddress"
            android:id="@+id/login_email"
            android:hint="@string/email_hint"
            style="@style/no_rounded"
            android:layout_gravity="center"
            android:padding="12sp"

        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:inputType="textPassword"
            android:id="@+id/login_password"
            android:hint="@string/password_hint"
            style="@style/bottom_rounded"
            android:layout_gravity="center"
            android:padding="12sp"

        />
    </LinearLayout>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_gravity="center_horizontal">

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/login_button"
           android:text="@string/login_button"
           />

       <Button
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:id="@+id/signup_button"
           android:text="@string/signup_button"/>


   </LinearLayout>

</LinearLayout>